# poker-network

./: .cvsignore  .gitignore  .gitmodules
CVSROOT/: commitinfo  config
Q1713/: Qpoker.php  README
aspoker/: AsPokAir-app.xml  README  SigningCert.p12  build.xml
aspoker/src/: aspoker.mxml  aspokerTestRunner.mxml
brecher/: HandEval.c  HandEval.h  HandEvalParms.h  Showdown.c  Showdown.h
ctm-eval/: Makefile  README
ctm-eval/drivers/: Makefile  caro2.c  caro2a.c  caro2b.c  carodump.c  cmp2.c  cmpall.c  cmpn.c  fish.c  newcmp2.c  newcmpall.c
ctm-eval/include/: eval-bg.h  eval.h  eval_n.h  poker.h  rank_eval.h  rank_eval2.h  tree.h  tree_inlines.h
ctm-eval/lib/: Makefile  README  dump_cards.c  dump_eval.c  dump_rank.c  endian.c  hand_names.c  helper.c  makeswitch.c  makeswitch.h  mktables.c  newdumpeval.c  plural_ranks.c  rank_names.c  string_to_card.c  (+1 more)
icm-calculator/: AUTHORS  LICENSE  icm-webservice.py  icm.html  icm.js  style.css
javapokercl/: TransmitPacket.java
jpoker/: index-da.html  index-de.html  index-en.html  index-en_CA.html  index-en_US.html  index-es.html  index-fi.html  index-fr.html  index-fr_BE.html  index-fr_CA.html  index-fr_FX.html  index-it.html  index-ja.html  index-nb.html  index-nl.html  index-pt.html  index-sv.html  index.html  player_arrive.swf  player_hand.swf
nevowpoker/: README  myelement.tac  mymodule.js
poker-network-adminsys/: Makefile  alerte-poker-log.mk  dispatch-log.mk  resthost.sql  route.sql  server-info.mk  user2table.sql
pokerd/: ChangeLog  Makefile  byte.c  conf.c  config.l  daemon.h  db.h  deck.h  eval.h  log.c  log.h  md5.h  monitor.c  net.c  net.h  pokerd.sql  pokerserv.h  rand.c  time.h  user-guide
pokersource.info/: 404.en.html  404.en.xhtml  404.php  Makefile  blue.css  footer.php  header.php  index.en.html  index.en.xhtml  index.php  navigation.en.xsl  poker-engine.en.html  poker-engine.en.xhtml  poker-engine.php  poker-eval.en.html  poker-eval.en.xhtml  poker-eval.php  poker-network.en.html  poker-network.en.xhtml  poker-network.php  pokersource.css  pokersource.xsl  pypoker-eval.php
qpoker/: ChangeLog  MANIFEST.in  README  card.py  poker2d-test.xml  qpoker.1  qpoker.py  qpoker.xml  qpoker2d.py  qpokerwidget.py  setup.py  test-qpokerwidget.py
sandbox/: test.as
tinypoker/: README  TODO
tinypoker/bagelbot-ng/: AUTHORS  CMakeLists.txt  INSTALL  README  TODO  bagelbot-ng.conf  bagelbot.conf  conf.c  conf.h  format.sh  main.c  main.h  play.c  play.h  signal.c  signal.h
tinypoker/libtinypoker/: AUTHORS  CMakeLists.txt  COPYRIGHT  ChangeLog  Doxyfile  HACKING  INSTALL  README  TODO  format.sh  tinypoker.pc.in
tinypoker/libtinypoker/scripts/: build-i686-pc-mingw32.sh  build-mingw32.sh  build-native.sh  clean-all.sh  format.sh
tinypoker/libtinypoker/src/: CMakeLists.txt
tinypoker/libtinypoker/src/examples/: CMakeLists.txt  client.c  server.c
tinypoker/libtinypoker/src/main/: CMakeLists.txt  tinypoker.c  tinypoker.h
tinypoker/libtinypoker/src/test/: CMakeLists.txt  test.h  testAddPlayer.c  testBestCombination.c  testDeck.c  testEnumerateAllHands.c  testEval.c  testEvalChar2Prime.c  testEvalPrime2Char.c  testEvalStraight2Char.c  testHandCompar.c  testHandshake.c  testNormalizeMessage.c  testParseMessage.c  testRankPlayers.c  testValidateCmdAction.c  testValidateCmdAnte.c  testValidateCmdBeatQ.c  testValidateCmdBlind.c  testValidateCmdBusted.c  testValidateCmdButton.c  testValidateCmdBuyin.c  testValidateCmdCall.c  testValidateCmdCheck.c  testValidateCmdDeal.c  testValidateCmdDown.c  testValidateCmdDraw.c  testValidateCmdDrawQ.c  testValidateCmdDrawn.c  testValidateCmdError.c  testValidateCmdFlop.c  testValidateCmdFold.c  testValidateCmdFrom.c  testValidateCmdGameOver.c  testValidateCmdIpp.c  testValidateCmdNewgame.c  testValidateCmdNo.c  testValidateCmdOk.c  testValidateCmdOpen.c  testValidateCmdPlayer.c  (+14 more)
tinypoker/libtinypoker/toolchains/: i686-pc-mingw32.cmake
tinypoker/pokerd/: .svnignore  CMakeLists.txt  ChangeLog  Makefile  README  auth.c  auth.h  byte.c  byte.h  conf.c  conf.h  config.l  config.y  daemon.c  daemon.h  db.c  db.h  deck.c  deck.h  eval.c  eval.h  log.c  log.h  main.c  main.h  md5.c  md5.h  monitor.c  monitor.h  net.c  net.h  poker.c  poker.h  pokerserv.c  pokerserv.h  rand.c  rand.h  sig.c  sig.h  time.c  (+2 more)
tinypoker/pokerd/docs/: PROTOCOL  db-schema.dia  user-guide
tinypoker/tinypoker/examples/: CMakeLists.txt  example-client.c  example-server.c
tinypoker/tinypoker/lib/: CMakeLists.txt  init.c  network.c  tinypoker.pc.in  version.c
tinypoker/tinypoker/lib/tinypoker/: init.h  network.h  tinypoker.h  version.h
tinypoker/tinypoker/tests/: CMakeLists.txt  test-version.c
tinypoker/tinypokerbot/: CMakeLists.txt  COPYRIGHT  INSTALL  README  TODO  bagelbot-ng.conf  conf.c  conf.h  format.sh  glue.c  glue.h  main.c  main.h  play.c  play.h  signal.c  signal.h
tinypoker/tinypokerbot/agents/: CMakeLists.txt  agent.h
tinypoker/tinypokerbot/agents/origami/: CMakeLists.txt  origami.c
tinypoker/tinypokerbot/scheme/: agent.scm  bagelbot.scm
tinypoker/tinypokerbot/scripts/: build-native.sh  clean-all.sh  format.sh
tinypoker/tinypokerclient/src/: CMakeLists.txt  main.cc  tinypokerclient.xpm  tpApp.cc  tpApp.h  tpConnectFrame.cc  tpConnectFrame.h  tpConnectionWizard.cc  tpConnectionWizard.h  tpConnectionWizardPage.cc  tpConnectionWizardPage.h  tpFrame.cc  tpFrame.h  tpLog.cc  tpLog.h
tinypoker/tinypokerd/: AUTHORS  CMakeLists.txt  COPYRIGHT  HACKING  INSTALL  README  TODO  format.sh  tinypokerd.conf
tinypoker/tinypokerd/contrib/legacy-client-proxy/: stunnel.conf
tinypoker/tinypokerd/contrib/ubuntu-gutsy/: tinypokerd
tinypoker/tinypokerd/contrib/xsd/: log.xsd
tinypoker/tinypokerd/man/: tinypokerd.mpt
tinypoker/tinypokerd/scripts/: build-native.sh  clean-all.sh  format.sh
tinypoker/tinypokerd/src/: CMakeLists.txt  config.c  config.h  db.c  db.h  deck.c  deck.h  log.c  log.h  monitor.c  monitor.h  pam.c  pam.h  poker.c  poker.h  pokerserv.c  pokerserv.h  signal.c  signal.h  tinypokerd.c  tinypokerd.h
weeodds/: index.php  mootools.js  style.css  weeodds.js
(+164 files in other folders)
